# finetune-whisper

./: .gitignore  README.md  pyproject.toml
finetune_whisper/: main.py  openai_whisper.py  training_proto.py  utils.py
